syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "HomeLimitedShopInfo.proto";

message HomeBasicInfo {
	uint32 cur_module_id = 1;
	uint32 cur_room_scene_id = 2;
	bool is_in_edit_mode = 3;
	uint64 exp = 4;
	uint32 level = 5;
	uint32 home_owner_uid = 6;
	HomeLimitedShopInfo limited_shop_info = 7;
	string owner_nick_name = 8;
}
